--- a/index.html
+++ b/index.html
@@ -158,22 +158,22 @@
 
       /* Hover colors */
       .icon a:nth-child(1):hover i {
-        color: #1da1f2; /* Twitter */
+        color: #1da1f2; /* facebook */
       }
       .icon a:nth-child(2):hover i {
         color: #c13584; /* Instagram */
       }
       .icon a:nth-child(3):hover i {
-        color: #ea4c89; /* Basketball (custom) */
+        color: greenyellow; /* HackerRank (custom) */
       }
       .icon a:nth-child(4):hover i {
         color: #0077b5; /* LinkedIn */
       }
       .icon a:nth-child(5):hover i {
-        color: #000; /* GitHub */
+        color: crimson; /* GitHub */
       }
       .icon a:nth-child(6):hover i {
-        color: peru; /* DEV */
+        color: rgb(94, 214, 94); /* Porfolio website */
       }
 
       @media (max-width: 480px) {
@@ -267,14 +267,14 @@
           href="https://www.instagram.com/_sohail_3621_?igsh=MWo5YWN3NzU0YW9iNw=="
           ><i class="fa-brands fa-instagram"></i
         ></a>
-        <a href="#"><i class="fa-solid fa-basketball"></i></a>
+        <a href="https://www.hackerrank.com/profile/work_sohail3621"><i class="fa-brands fa-hackerrank"></i></a>
         <a href="https://linkedin.com/in/sohail-3621" target="_blank"
           ><i class="fa-brands fa-linkedin-in"></i
         ></a>
         <a href="https://github.com/sohail3621" target="_blank"
           ><i class="fa-brands fa-github"></i
         ></a>
-        <a href="#"><i class="fa-brands fa-dev"></i></a>
+        <a href="#"><i class="fa-solid fa-globe"></i></a>
       </div>
     </div>
   </body>
