--- a/index.html
+++ b/index.html
@@ -267,11 +267,13 @@
           href="https://www.instagram.com/_sohail_3621_?igsh=MWo5YWN3NzU0YW9iNw=="
           ><i class="fa-brands fa-instagram"></i
         ></a>
-        <a href="https://www.hackerrank.com/profile/work_sohail3621"><i class="fa-brands fa-hackerrank"></i></a>
-        <a href="https://linkedin.com/in/sohail-3621" target="_blank"
+        <a href="https://www.hackerrank.com/profile/work_sohail3621"
+          ><i class="fa-brands fa-hackerrank"></i
+        ></a>
+        <a href="www.linkedin.com/in/sohail-3621-"
           ><i class="fa-brands fa-linkedin-in"></i
         ></a>
-        <a href="https://github.com/sohail3621" target="_blank"
+        <a href="https://github.com/sohail3621" 
           ><i class="fa-brands fa-github"></i
         ></a>
         <a href="#"><i class="fa-solid fa-globe"></i></a>
