--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <a href="https://www.hackerrank.com/profile/work_sohail3621"
           ><i class="fa-brands fa-hackerrank"></i
         ></a>
-        <a href="www.linkedin.com/in/sohail-3621-"
+        <a href="https://www.linkedin.com/in/sohail-3621-/" 
           ><i class="fa-brands fa-linkedin-in"></i
         ></a>
         <a href="https://github.com/sohail3621" 
